# composite-tests

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  reproduce_experiments.md
datasets/: LICENSE.md
experiments/: exp_gaussian_power_curves.py  exp_kef_visual_fits.py  exp_lengthscales.py  exp_overlap.py  exp_timing.py  exp_toggle_switch_increasing_T.py  figures.py  galaxy_dataset.py  runners.py
src/composite_tests/: bootstrapped_tests.py  estimators.py  extra_types.py  jax_utils.py  kernels.py  ksd.py  mmd.py  optimizers.py  rejection_sampler.py
src/composite_tests/distributions/: __init__.py  gaussian.py  kef.py  students_t.py  toggle_switch.py
tests/: test_gaussian.py  test_jax_utils.py  test_kef.py  test_kernels.py  test_ksd.py  test_optimizers.py  test_rejection_sampler.py  test_toggle_switch.py
